# geoto3d

./: ASSIMP_INSTALL  Dockerfile
nico_3d/GeoTo3D/: CMakeLists.txt  GeoTo3D_shaders.qrc
nico_3d/GeoTo3D/inc/: cuda_bp.h  cuda_common.h  cuda_gvm.h  mainwindow.h  ncapp.h  nccarve.h  ncflow.h  ncqtconfig3D.h
nico_3d/GeoTo3D/shaders/carve/: color.vert  vcolor.frag  voxel.frag  voxel.geom  voxel.glsl  voxel.vert
nico_3d/GeoTo3D/shaders/flow/: bp_sweep.frag  carve.frag  carve.vert  cd_sweep.frag  delaunay.frag  delaunay.vert  edge.frag  gauss_c1_X.frag  gauss_c1_X.vert  gauss_c1_Y.frag  gauss_c2_X.frag  gauss_c2_Y.frag  grayscale.frag  gvminit.frag  iter_sweep.frag  laplace.frag  mdl_sweep.frag  mesh.frag  mesh.vert  pass1_sweep.frag  pass2_sweep.frag  sub_X.frag  sub_Y.frag  sweep_common.frag  sweep_common.vert  test_sweep.frag  warp.frag  warp.vert
nico_3d/GeoTo3D/src/: cuda_bp.cu  cuda_gvm.cu  mainwindow.cpp  ncapp.cpp  nccarve.cpp  ncflow.cpp  ncqtconfig3D.cpp
nico_3d/GeoToLas/: CMakeLists.txt
nico_3d/GeoToLas/src/: main.cpp
nico_3d/GeoToView/: CMakeLists.txt  geotoview.qrc  resource.h
nico_3d/GeoToView/doc/: GeoToView user manual.docx
nico_3d/GeoToView/inc/: Log.h  gmf.h  mainwindow.h  ncapp.h  viewerPlugInCallback.h
nico_3d/GeoToView/magweg/: GeoToView
nico_3d/GeoToView/shaders/: ball.frag  ball.geom  ball.vert  blit.frag  blit.vert  cylinder.frag  cylinder.geom  cylinder.vert  stereo.frag  stereo.vert
nico_3d/GeoToView/src/: gmf.cpp  main.cpp  mainwindow.cpp  ncapp.cpp
nico_3d/GeoToView/style/: style.qss
nico_3d/GeoToView/win32/: ALL_BUILD.vcproj  CMakeCache.txt  GeoToView.sln  GeoToView.vcproj  ZERO_CHECK.vcproj  cmake_install.cmake  geotoview.qrc.depends  qrc_geotoview.cxx  qrc_shaders.cxx  shaders.qrc.depends
nico_3d/GeoToView/win32/inc/: moc_mainwindow.cxx  moc_mainwindow.cxx_parameters  moc_ncapp.cxx  moc_ncapp.cxx_parameters
nico_3d/all/: CMakeLists.txt
nico_3d/nccommon/: CMakeLists.txt
nico_3d/nccommon/include/: master.h  nccalibration.h  nccalibrationset.h  nccommon.h  ncconfig.h  ncdata.h  ncfbo.h  ncgl.h  ncmath.h  ncmesh.h  ncpbo.h  ncpointmap.h  ncposelist.h  ncprogram.h  ncrenderbuffer.h  ncteximage.h  nctrack.h  nctracklist.h  ncundistort.h  tetgen.h  triangle.h
nico_3d/nccommon/shaders/: undistort.frag  undistort.vert
nico_3d/nccommon/src/: nccalibration.cpp  nccalibrationset.cpp  nccommon.cpp  ncdata.cpp  ncfbo.cpp  ncgl.cpp  ncmesh.cpp  ncpbo.cpp  ncpointmap.cpp  ncposelist.cpp  ncprogram.cpp  ncrenderbuffer.cpp  ncteximage.cpp  nctrack.cpp  nctracklist.cpp  ncundistort.cpp  tetgen.cpp  triangle.cpp
nico_3d/nccommon/win32/: ALL_BUILD.vcproj  CMakeCache.txt  ZERO_CHECK.vcproj  cmake_install.cmake  nccommon.sln  nccommon.vcproj
nico_3d/ncmodel/: CMakeLists.txt  ncmodel_shaders.qrc
nico_3d/ncmodel/inc/: ncassimp.h  ncgvm.h  ncmdl.h  ncmodel.h  ncskp.h
nico_3d/ncmodel/shaders/: assimp.frag  assimp.geom  assimp.vert  gvm.frag  gvm.geom  gvm.glsl  gvm.vert  gvmd.frag  mdl.frag  mdl.vert  skp.frag  skp.geom  skp.vert
nico_3d/ncmodel/src/: ncassimp.cpp  ncgvm.cpp  ncmdl.cpp  ncmodel.cpp  ncskp.cpp
nico_3d/ncmodel/win32/: ALL_BUILD.vcproj  CMakeCache.txt  ZERO_CHECK.vcproj  cmake_install.cmake  ncmodel.sln  ncmodel.vcproj  qrc_ncmodel_shaders.cpp  qrc_ncmodel_shaders.cxx
nico_3d/ncmodel/win32/inc/: moc_ncassimp.cpp_parameters  moc_ncassimp.cxx_parameters  moc_ncmdl.cpp_parameters  moc_ncmdl.cxx_parameters  moc_ncmodel.cpp_parameters  moc_ncmodel.cxx_parameters  moc_ncskp.cpp_parameters  moc_ncskp.cxx_parameters
nico_3d/ncqt/: CMakeLists.txt  ncqt_shaders.qrc
nico_3d/ncqt/icons/: icons.qrc
nico_3d/ncqt/include/: ncqt.h  ncqtabout.h  ncqtapp.h  ncqtcamera.h  ncqtcamera2.h  ncqtconfig.h  ncqtconfigmanager.h  ncqtdock.h  ncqtdoubleslidercombo.h  ncqtdoublespinbox.h  ncqtglwidget.h  ncqtintslidercombo.h  ncqtintspinbox.h  ncqtlogger.h  ncqtmainwindow.h  ncqtmultibar.h  ncqtprogram.h  ncqtprogressbar.h  ncqtscenix.h  ncqtsignalhandler.h  ncqtvideo.h  ncqtxymessenger.h
nico_3d/ncqt/shaders/: cube.frag  cube.geom  cube.vert
nico_3d/ncqt/src/: ncqt.cpp  ncqtabout.cpp  ncqtapp.cpp  ncqtcamera.cpp  ncqtcamera2.cpp  ncqtconfig.cpp  ncqtconfigmanager.cpp  ncqtdock.cpp  ncqtdoubleslidercombo.cpp  ncqtdoublespinbox.cpp  ncqtglwidget.cpp  ncqtintslidercombo.cpp  ncqtintspinbox.cpp  ncqtlogger.cpp  ncqtmainwindow.cpp  ncqtmultibar.cpp  ncqtprogram.cpp  ncqtprogressbar.cpp  ncqtscenix.cpp  ncqtsignalhandler.cpp  ncqtvideo.cpp  ncqtxymessenger.cpp
nico_3d/ncqt/win32/: ALL_BUILD.vcproj  CMakeCache.txt  ZERO_CHECK.vcproj  cmake_install.cmake  moc_arthurwidgets.cpp  moc_ncqtabout.cpp  moc_ncqtcamera.cpp  moc_ncqtconfig.cpp  moc_ncqtdock.cpp  moc_ncqtdoubleslidercombo.cpp  moc_ncqtdoublespinbox.cpp  moc_ncqtglwidget.cpp  moc_ncqtintspinbox.cpp  moc_ncqtlogger.cpp  moc_ncqtmainwindow.cpp  moc_ncqtmultibar.cpp  moc_ncqtprogressbar.cpp  moc_ncqtscenix.cpp  moc_ncqtsignalhandler.cpp  moc_ncqtvideo.cpp  moc_ncqtxymessenger.cpp  ncqt.sln  ncqt.vcproj  ncqt_automoc.cpp  qrc_icons.cpp  qrc_icons.cxx  qrc_ncqt_shaders.cpp  qrc_ncqt_shaders.cxx  qrc_shared.cxx
nico_3d/ncqt/win32/icons/: icons.qrc.depends
nico_3d/ncqt/win32/include/: moc_ncqt.cpp_parameters  moc_ncqt.cxx_parameters  moc_ncqtabout.cpp  moc_ncqtabout.cpp_parameters  moc_ncqtabout.cxx  moc_ncqtabout.cxx_parameters  moc_ncqtcamera.cpp  moc_ncqtcamera.cpp_parameters  moc_ncqtcamera.cxx  moc_ncqtcamera.cxx_parameters  moc_ncqtconfig.cpp  moc_ncqtconfig.cpp_parameters  moc_ncqtconfig.cxx  moc_ncqtconfig.cxx_parameters  moc_ncqtconfigmanager.cxx  moc_ncqtconfigmanager.cxx_parameters  moc_ncqtdock.cpp  moc_ncqtdock.cpp_parameters  moc_ncqtdock.cxx  moc_ncqtdock.cxx_parameters  moc_ncqtdoubleslidercombo.cpp  moc_ncqtdoubleslidercombo.cpp_parameters  moc_ncqtdoubleslidercombo.cxx  moc_ncqtdoubleslidercombo.cxx_parameters  moc_ncqtdoublespinbox.cpp  moc_ncqtdoublespinbox.cpp_parameters  moc_ncqtdoublespinbox.cxx  moc_ncqtdoublespinbox.cxx_parameters  moc_ncqtglwidget.cpp  (+43 more)
nico_3d/ncvoxel/: CMakeLists.txt
nico_3d/ncvoxel/inc/: ncvoxel.h
nico_3d/ncvoxel/src/: ncvoxel.cpp
(+32 files in other folders)
